--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 body{
+   
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: rgb(179, 218, 40);
+    color: rgb(212, 212, 125);
     font-size: 30px;
     font-family: 'Cinzel', serif;
     margin-top: 100px;
     background: linear-gradient(59.74deg, #020718 44.35%, #100830 100%);
+   
+    
 }
 
 .boardGrid 
@@ -17,6 +20,8 @@ body{
     gap: 10px;
     list-style: none;
     margin-top: 40px;
+    
+    
     
 }
 
@@ -34,6 +39,7 @@ body{
     justify-content: center;
     font-size: 90px;
     color:beige;
+    box-shadow: #e9aae3;
     
 }
 
@@ -41,24 +47,38 @@ body{
 
 background: rgb(173, 117, 173);
 cursor: pointer;
+color: #100830;
 
 }
+
+.endgame
+{
+    
+    transform: width height 1s;
+    transition: all ease-in-out 2s;
+}
+
 
 .show
 {
-   display: none;
-    background-color: black;
+    
+    display: flex;
+    background-color: rgb(3, 40, 43);
     position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    font-size: 70px;
+    width : 500px;
+    height: 400px;
+    font-size: 40px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    opacity: 90%;
+    border: 10px solid rgb(212, 212, 125);
+    transform: scale(1.5) ;
+    transition-delay: 2s;
+   
+    
+    
 }
+
 
 .show button{
 
