--- a/style.css
+++ b/style.css
@@ -53,16 +53,14 @@ color: #100830;
 
 .endgame
 {
-    
-    transform: width height 1s;
-    transition: all ease-in-out 2s;
+    transition-delay: 2s;
 }
 
 
 .show
 {
     
-    display: flex;
+    display: none;
     background-color: rgb(3, 40, 43);
     position: fixed;
     width : 500px;
@@ -72,7 +70,6 @@ color: #100830;
     align-items: center;
     justify-content: center;
     border: 10px solid rgb(212, 212, 125);
-    transform: scale(1.5) ;
     transition-delay: 2s;
    
     
@@ -85,6 +82,7 @@ color: #100830;
     font-size: 30px;
     font-family: 'Cinzel', serif;
     margin-top: 70px;
+    transition-delay: 2s;
 }
 
 .show button:hover{
