--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     grid-template-columns: repeat(3, 100px);
     gap: 10px;
     list-style: none;
-    margin-top: 40px;
+    margin-top: 10px;
     
     
     
@@ -27,7 +27,7 @@ body{
 
 
 
-.boxes
+.boardGrid  .boxes
 {
    
     border: 1px solid black;
@@ -37,7 +37,7 @@ body{
     display: flex;
     align-content: center;
     justify-content: center;
-    font-size: 90px;
+    font-size: 80px;
     color:beige;
     box-shadow: #e9aae3;
     
@@ -51,13 +51,10 @@ color: #100830;
 
 }
 
+
+
+
 .endgame
-{
-    transition-delay: 2s;
-}
-
-
-.show
 {
     
     display: none;
@@ -69,15 +66,13 @@ color: #100830;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 10px solid rgb(212, 212, 125);
-    transition-delay: 2s;
-   
+    border: 10px solid rgb(212, 212, 125)
     
     
 }
 
 
-.show button{
+#resetButton{
 
     font-size: 30px;
     font-family: 'Cinzel', serif;
@@ -85,8 +80,8 @@ color: #100830;
     transition-delay: 2s;
 }
 
-.show button:hover{
+#resetButton:hover{
 
     cursor: pointer;
-    background-color: rgb(55, 166, 231);    
+    background-color: #1434a7;    
 }
