--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ h1 {
   cursor: pointer;
   color: #100830;
 }
-
 .endgame {
   display: flex;
   background-color: rgb(3, 40, 43);
@@ -55,16 +54,15 @@ h1 {
   align-items: center;
   justify-content: center;
   border: 10px solid rgb(212, 212, 125);
-  animation-name: example;
-  animation-duration: 4s;
-  
+  transition-duration: 1s;
+  transition-delay: 1s;
 }
 
 #resetButton {
   font-size: 30px;
   font-family: "Cinzel", serif;
   margin-top: 70px;
-  
+  animation-name: example;
 }
 
 #resetButton:hover {
@@ -90,23 +88,13 @@ h1 {
   padding: 5px;
 }
 
-.line{
-
-    border: 1px solid white;
-    height: 1px;
-    width: 450px;
-    position: absolute;
-    rotate: -45deg;
-    top: 400px;
-    background-color: white;
-    transition-duration: 2s;
-
-}
-
-@keyframes example {
-  
-  0%   {left:center; bottom:0px;}
-  50%  {left:center; top:50px;}
-  100% {left:center; top:100px;}
-
+.line {
+  border: 1px solid white;
+  height: 1px;
+  width: 450px;
+  position: absolute;
+  rotate: -45deg;
+  top: 400px;
+  background-color: white;
+  transition-duration: 0.5s;
 }
